Fixed overflow

--- a/styles/editor.css
+++ b/styles/editor.css
@@ -29,6 +29,7 @@ body {
   width: 100%;
   flex-direction: row;
   justify-content: center;
+  box-sizing: border-box;
   padding: 10px 20px;
 }
 
